se agrega informacion personal a la  hoja de vida

--- a/EDUCACION.html
+++ b/EDUCACION.html
@@ -1074,3 +1074,10 @@ Ahqc3UNXXaumgKaApoCmgKaAyxT4f3DZRTNIB/mKAAAAAElFTkSuQmCC
 
  />  </g>
 </svg></left>
+</header>
+<body>
+  <a href="file:///Users/mac/Desktop/CURSO%20DE%20PROGRAMACION/EXAMEN%20FINAL%20HTML5/untitled.html">inicio</a>
+
+
+</body>
+</html>
