--- a/untitled.html
+++ b/untitled.html
@@ -1077,11 +1077,33 @@ Ahqc3UNXXaumgKaApoCmgKaAyxT4f3DZRTNIB/mKAAAAAElFTkSuQmCC
 <h2>nombres: andres ernesto esquivel diaz</h2>
 <h3>fecha de nacimento:21 de abril de 1997</h3>
 <h3>lugar de nacimiento:Bogota D.C.</h3>
-
-
 	
 </header>
 <body>
+<ol>
+
+<li> 
+	<a href="file:///Users/mac/Desktop/CURSO%20DE%20PROGRAMACION/EXAMEN%20FINAL%20HTML5/EDUCACION.html"target="blank">educacion</a>
+</li>
+<li>	
+	<a href="file:///Users/mac/Desktop/CURSO%20DE%20PROGRAMACION/EXAMEN%20FINAL%20HTML5/ECPERIENCIA.html">experencia</a>
+</li>
+</ol>
+<h2>informacion personal</h2>
+<img src="img/foto andres.jpg" width="250">
+<p>
+	Estudiante de derecho de VII semestre de la Corporacion Universitaria la Republicana, con salida formacion etica, compromiso, responsabilidad, con capacidad de aprendizaje rapido, persona activa, trabajo en equipo, buen manejo de relaciones interpersonales, atenta, alegre y muy entusiasta, con deseos de desarrollo profesional y personal. 
+
+Forma Adquirir experiencia y conocimientos con los que pueda lograr ocupar cargos de mayor jerarquia y responsabilidad dentro de cualquier organizacion; poder destacarme en cada una de las tareas encomendadas al igual que con los compromisos adquiridos. Buscar continuamente la actualizacion y mejoramiento continuo a nivel personal y profesional. 
+
+desarrollador web
+<ul>
+	<li>html</li>
+	<li>css3</li>
+	<li>git</li>
+</ul>
+</p>
+
 
 </body>
 </html>
