se agrega formulario de inscripcion

--- a/EDUCACION.html
+++ b/EDUCACION.html
@@ -1077,7 +1077,59 @@ Ahqc3UNXXaumgKaApoCmgKaAyxT4f3DZRTNIB/mKAAAAAElFTkSuQmCC
 </header>
 <body>
   <a href="file:///Users/mac/Desktop/CURSO%20DE%20PROGRAMACION/EXAMEN%20FINAL%20HTML5/untitled.html">inicio</a>
+  <h1>hoja de vida</h1>
+  <h2>nombres: andres ernesto esquivel diaz</h2>
+<h3>fecha de nacimento:21 de abril de 1997</h3>
+<h3>lugar de nacimiento:Bogota D.C.</h3>
+  <table border="1" cellspacing="0" cellpadding="10">
+<tr>
+  <th> año </th>
+  <th> institucion </th>
+  <th> lugar </th>
+  <th> culmino?</th>
+</tr>  
+<tr>
+  <th>2015</th>
+<th>IMAR</th>
+<th>BOGOTA</th>
+  <th>SI</th>
+</tr>  
+<tr>
+  <th>2020</th>
+<th>REPUBLICANA</th>
+<th>BOGOTA</th>
+  <th>ESTUDIANDO</th>
+</tr> 
 
+  </table>
+<h2>agregar estudios</h2>
+
+  <form>
+    <p>
+      <label for="age">año</label> 
+    
+    <input type="number" name="age" placeholder="2016" required="number">
+    </p>
+<p>
+     <label for="username">institucion</label>
+    <input type="text" name="username" placeholder="nombre del instituto" required="username">
+</p>
+<p>
+  <label for="coment">lugar</label>
+  <textarea name="coment" id="" cols="30" rows="3"></textarea>
+</p>
+<p>
+
+  <input type="submit" name="enviar" value="enviar">
+</p>
+
+
+
+
+
+
+
+  </form>
 
 </body>
 </html>
