--- a/untitled.html
+++ b/untitled.html
@@ -1103,7 +1103,11 @@ desarrollador web
 	<li>git</li>
 </ul>
 </p>
-
+<footer>
+	correo: g_oo12@hotmail.com
+	telefono: 31385436
+	
+</footer>
 
 </body>
 </html>
