se agrega la tercera pagina

--- a/ECPERIENCIA.html
+++ b/ECPERIENCIA.html
@@ -1077,6 +1077,14 @@ Ahqc3UNXXaumgKaApoCmgKaAyxT4f3DZRTNIB/mKAAAAAElFTkSuQmCC
 </header>
 <body>
 	<a href="file:///Users/mac/Desktop/CURSO%20DE%20PROGRAMACION/EXAMEN%20FINAL%20HTML5/untitled.html">inicio</a>
+	<h1>hoja de vida</h1>
+  <h2>nombres: andres ernesto esquivel diaz</h2>
+<h3>fecha de nacimento:21 de abril de 1997</h3>
+<h3>lugar de nacimiento:Bogota D.C.</h3>
+<h2>mi experencia</h2>
+
+<video src="img/DEPENDIENTE JUDICIAL.mov" height="300" controls=""></video>
+
 
 </body>
 </html>
